--- a/custom.css
+++ b/custom.css
@@ -26,7 +26,7 @@ body {
   padding: 14px 24px;
 }
 
-.packages {
+#pkgstats .packages {
   margin: 60px 0;
 }
 .packages p + h4 {
@@ -38,4 +38,7 @@ body {
 }
 .footer {
   text-align: right;
+}
+.category.alert {
+  padding: 1px 10px 1px 10px;
 }
